Fixing overflow in code snippets.

--- a/_sass/components/_components__code-snippet.scss
+++ b/_sass/components/_components__code-snippet.scss
@@ -7,7 +7,6 @@ $c-code-snippet__padding:           $f-space--small;
   border-width: 1px;
   border-style: solid;
   padding: $f-space--small;
-  overflow: scroll;
 
   .highlight {
     margin: 0;
